<resources>
    <string name="app_name">FakeRxJava</string>
    <string name="title_activity_rx_java_sample">RxJavaSampleActivity</string>

    <!--  创建型操作符  -->
    <string name="title_operator_create">Create</string>
    <string name="operator_create">Create</string>
    <string name="operator_just">just</string>
    <string name="operator_fromArray">fromArray</string>
    <string name="operator_empty">empty</string>
    <string name="operator_range">range</string>
    <string name="operator_interval">interval</string>

    <!--  变换型操作符  -->
    <string name="title_operator_map">Map</string>
    <string name="operator_map">Map</string>
    <string name="operator_flatmap">FlatMap</string>
    <string name="operator_concatMap">ConcatMap</string>
    <string name="operator_groupby">GroupBy</string>
    <string name="operator_buffer">Buffer</string>
    <string name="operator_flatmap_with_erro">FlatMap With Error</string>

    <!--  过滤型操作符  -->
    <string name="title_operator_filter">Filter</string>
    <string name="operator_filter">filter</string>
    <string name="operator_take">take</string>
    <string name="operator_distinct">distinct</string>
    <string name="operator_skip">skip</string>
    <string name="operator_elementAt">elementAt</string>
    <string name="operator_ignoreElement">ignoreElement</string>
    <string name="operator_first">first</string>
    <string name="operator_last">last</string>
    <string name="operator_sample">sample</string>

    <!--  条件操作符  -->
    <string name="title_operator_condition">Condition</string>
    <string name="operator_all">all</string>
    <string name="operator_any">any</string>
    <string name="operator_contain">contain</string>

    <!--    合并操作符    -->
    <string name="title_operator_merge">Merge</string>
    <string name="operator_startWith">startWith</string>
    <string name="operator_join">join</string>
    <string name="operator_merge">merge</string>
    <string name="operator_zip">zip</string>
    <string name="operator_switch">switch</string>
    <string name="operator_concat">concat</string>
    <string name="operator_concatWith">concatWith</string>
    <string name="operator_mergeWith">mergeWith</string>
    <string name="operator_intervalRange">intervalRange</string>

    <!--    异常处理    -->
    <string name="title_operator_error">ErrorHandle</string>
    <string name="operator_onErrorReturn">onErrorReturn</string>
    <string name="operator_onErrorResumeNext">onErrorResumeNext</string>
    <string name="operator_onExceptionResumeNext">onExceptionResumeNext</string>
    <string name="operator_retry">retry</string>

    <!--    异常处理    -->
    <string name="title_operator_scheduler">Scheduler</string>
    <string name="rxjava_scheduler_asynchronous_thread">Asynchronous thread</string>
    <string name="rxjava_scheduler_synchronization_thread">Synchronization thread</string>
    <string name="rxjava_download_picture">Download Picture</string>


    <!--    背压    -->
    <string name="title_operator_flowable">Flowable</string>
    <string name="rxjava_backpress_exception">BackPress exception</string>
    <string name="rxjava_request">Subscription request</string>


    <!--    功能操作符    -->
    <string name="title_operator_function">Function</string>
    <string name="operator_delay">delay</string>
    <string name="operator_doOnNext">doOnNext</string>
    <string name="rxjava_backpress_latest">Backpress Latest</string>
    <string name="operator_doAfterNext">doAfterNext</string>
    <string name="operator_timeout">timeout</string>
    <string name="operator_timestamp">timestamp</string>
</resources>