<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/size_padding_screen"
    android:orientation="vertical"
    tools:context=".real.fragment.RxJavaCreateFragment">

    <Button
        android:id="@+id/btn_rxjava_operate_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_filter" />


    <Button
        android:id="@+id/btn_rxjava_operate_take"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_take" />

    <Button
        android:id="@+id/btn_rxjava_operate_distinct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_distinct" />

    <Button
        android:id="@+id/btn_rxjava_operate_skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_skip" />

    <Button
        android:id="@+id/btn_rxjava_operate_elementAt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_elementAt" />
    <Button
        android:id="@+id/btn_rxjava_operate_ignoreElement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_ignoreElement" />
    <Button
        android:id="@+id/btn_rxjava_operate_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_first" />
    <Button
        android:id="@+id/btn_rxjava_operate_last"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_last" />
    <Button
        android:id="@+id/btn_rxjava_operate_sample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_sample" />
</LinearLayout>