<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/size_padding_screen"
    tools:context=".real.fragment.RxJavaCreateFragment">

    <Button
        android:id="@+id/btn_rxjava_operate_startWith"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_startWith" />

    <Button
        android:id="@+id/btn_rxjava_operate_concatWith"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_concatWith" />

    <Button
        android:id="@+id/btn_rxjava_operate_concat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_concat" />

    <Button
        android:id="@+id/btn_rxjava_operate_join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_join" />

    <Button
        android:id="@+id/btn_rxjava_operate_merge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_merge" />
    <Button
        android:id="@+id/btn_rxjava_operate_mergeWith"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_mergeWith" />

    <Button
        android:id="@+id/btn_rxjava_operate_zip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_zip" />

    <Button
        android:id="@+id/btn_rxjava_operate_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_switch" />


</LinearLayout>