<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/size_padding_screen"
    tools:context=".real.fragment.RxJavaCreateFragment">

    <Button
        android:id="@+id/btn_rxjava_delay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_delay" />

    <Button
        android:id="@+id/btn_rxjava_doOnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_doOnNext" />

    <Button
        android:id="@+id/btn_rxjava_doAfterNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_doAfterNext" />

    <Button
        android:id="@+id/btn_rxjava_timeout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_timeout" />

    <Button
        android:id="@+id/btn_rxjava_timestamp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_timestamp" />
</LinearLayout>