<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/size_padding_screen"
    android:orientation="vertical"
    tools:context=".real.fragment.RxJavaCreateFragment">

    <Button
        android:id="@+id/btn_rxjava_operate_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_map" />

    <Button
        android:id="@+id/btn_rxjava_operate_flatmap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_flatmap" />


    <Button
        android:id="@+id/btn_rxjava_operate_concatMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_concatMap" />


    <Button
        android:id="@+id/btn_rxjava_operate_buffer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_buffer" />


    <Button
        android:id="@+id/btn_rxjava_operate_groupby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_groupby" />

</LinearLayout>